5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1712_2503.log
== SUBMITION (2019-05-14 08:51:50) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1:
	  w=(((-1)**(i+1)))
	  v=(4/y)  
	  h=(w*v)
else:
		j=4.0
c=c+1
y=y+2
i=i+1
j=j+h
print(round(j, 8))
-- EXECUTION TIME:
0.211698
-- ERROR:
  File "/home/codebench/codes/1712/2503/main.py", line 7
    if(k>1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:51:52) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1:
	  w=(((-1)**(i+1)))
	  v=(4/y)  
	  h=(w*v)
else:
		j=4.0
c=c+1
y=y+2
i=i+1
j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 7
    if(k>1:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:52:16) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
	  w=(((-1)**(i+1)))
	  v=(4/y)  
	  h=(w*v)
else:
		j=4.0
c=c+1
y=y+2
i=i+1
j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 7
    if(k>1:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:53:03) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
	  	v=(4/y)  
	  	h=(w*v)
else:
		j=4.0
c=c+1
y=y+2
i=i+1
j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 9
    v=(4/y)  
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:53:19) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
	  	v=(4/y)  
	  	h=(w*v)
else:
		j=4.0
c=c+1
y=y+2
i=i+1
j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 9
    v=(4/y)  
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 08:57:13) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
	  	v=(4/y)  
	  	h=(w*v)
   else:
		j=4.0
   c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- EXECUTION TIME:
0.216976
-- ERROR:
  File "/home/codebench/codes/1712/2503/main.py", line 9
    v=(4/y)  
            ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:57:17) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
	  	v=(4/y)  
	  	h=(w*v)
   else:
		j=4.0
   c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 9
    v=(4/y)  
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:57:34) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
	  	h=(w*v)
   else:
		j=4.0
   c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 10
    h=(w*v)
          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:57:48) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
   else:
		j=4.0
   c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 11
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:57:59) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
		else:
		j=4.0
   c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:58:06) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
   c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 13
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:58:18) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
   y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 14
    y=y+2
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:58:33) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
   i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 15
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:58:39) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
	i=i+1
   j=j+h
print(round(j, 8))
-- ERROR:
File "XXXX", line 16
    j=j+h
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:58:51) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
	i=i+1
	j=j+h
print(round(j, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 08:59:03) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
	i=i+1
	j=j+h
print(round(j, 8))
-- EXECUTION TIME:
0.183148
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:16:19) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
	i=i+1
	j=j+h
print(round(j, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 09:16:31) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
i=1
j=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(4/y)  
		h=(w*v)
	else:
		j=4.0
	c=c+1
	y=y+2
	i=i+1
	j=j+h
print(round(j, 8))
-- EXECUTION TIME:
0.218482
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
